# crud-app-rust

./: .env  Cargo.toml
src/: main.rs
